Thu Aug 25 00:39:50 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (append_wstr): exclude the terminator from the
	  result length when input len == -1.

Wed Aug 24 22:41:30 2016  Kouhei Sutou  <kou@cozmixng.org>

	* gc.c (gc_reset_malloc_info): Remove too much ";".

Wed Aug 24 20:07:57 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* include/ruby/defines.h (ALWAYS_INLINE): Add alternative definition.
	  Fix compile error with compilers that do not have force inline
	  attribute, including old version of fcc on Solaris 10.
	  [ruby-dev:49773] [Bug #12701]

Wed Aug 24 16:56:26 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* .gdbinit: follow r55766's VM change.

Wed Aug 24 12:57:56 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_mod_initialize, rb_class_initialize): [DOC] these
	  methods do not invoke module_eval/class_eval, just eval the
	  given block under the new module/class but sharing the context
	  with the surrounding scope like those methods.
	  [ruby-core:77023] [Bug #12696]

Tue Aug 23 10:34:40 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/psych/test_psych.rb (test_load_file_with_fallback): fix
	  Tempfile leak.  https://github.com/tenderlove/psych/pull/288

Tue Aug 23 10:15:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_fs_setter): check and convert $; value at
	  assignment.

Tue Aug 23 02:09:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_split_m): show $; name in error message when it
	  is a wrong object.

Mon Aug 22 16:29:52 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/csv.rb (CSV#shift): store partial quoted strings in an array
	  and join at last, to improve performance with very long quoted
	  lines.  [ruby-core:76987] [Bug #12691]

Mon Aug 22 14:35:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* man/irb.1: remove useless -width option.
	  [ruby-dev:49767] [Bug #12692]

Mon Aug 22 09:02:56 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
